Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/PKB_Featured__c.object
<CustomObject>
    <description>allows admins to push articles into the &quot;Featured&quot; section, or, alternatively, by specifying a keyword or keywords, allows admins to push articles to the top of searches for those keywords.</description>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>The article number of the article being linked to as a keyword or featured article. Not the same as the Article or Knowledge Article Version record ID.</description>
        <inlineHelpText>The article number of the article being linked to as a keyword or featured article. Not the same as the Article or Knowledge Article Version record ID.</inlineHelpText>
        <label>Article Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <description>Date after which the article will no longer appear in the &quot;Featured&quot; section. A empty value means no expiration date. Does not apply to records with the &quot;Is Keyword Article&quot; checked.</description>
        <inlineHelpText>Date after which the article will no longer appear in the &quot;Featured&quot; section. A empty value means no expiration date. Does not apply to records with the &quot;Is Keyword Article&quot; checked.</inlineHelpText>
        <label>Featured Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Keyword_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if this article is linked to a keyword. When checked, this article will not appear in the Featured Articles section of the PKB and will instead appear as a Recommended article whenever the keyword(s) specified on this record are searched for.</description>
        <inlineHelpText>Check this field if this article is linked to a keyword. When checked, this article will not appear in the Featured Articles section of the PKB and will instead appear as a Recommended article whenever the keyword(s) specified on this record are searched</inlineHelpText>
        <label>Is Keyword Article?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>Enter the keyword or keywords here so that, when those keywords are entered into a search on the PKB, this article will appear at the top of the search results as a recommended article.</description>
        <inlineHelpText>Enter the keyword or keywords here so that, when those keywords are entered into a search on the PKB, this article will appear at the top of the search results as a recommended article.</inlineHelpText>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the order that this article will appear when being displayed with other articles as part of the featured or recommended sections. Lower numbers appear towards the top.</description>
        <inlineHelpText>Specifies the order that this article will appear when being displayed with other articles as part of the featured or recommended sections. Lower numbers appear towards the top.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PKB_Name__c</fullName>
        <description>This must match one of the API names of the Sites that are configured to use the PKB package.</description>
        <inlineHelpText>This must match one of the API names of the Sites that are configured to use the PKB package.</inlineHelpText>
        <label>PKB Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PKB Featured</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Expiration__c</columns>
        <columns>Is_Keyword_Article__c</columns>
        <columns>Keyword__c</columns>
        <columns>PKB_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PKBF-{000000}</displayFormat>
        <label>PKB Featured Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Featured</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>